InfraPlatform/elasticache/v3/cf-elasticache-valkey.yaml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  AppShortName:
    Type: String
    Description: AppShortName
  EnvName:
    Type: String
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-dev1
      - nprd-dev2
      - nprd-dev-b
      - nprd-sit1
      - nprd-sit2
      - nprd-sit3
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-sit-c
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-uat-c      
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - nprd-pp-c
      - prod
      - prod-a
      - prod-b
      - prod-c 
    Description: Environment
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VpcId of your existing Virtual Private Cloud (VPC)
  AppSubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: VPC Subnet ids for App
  VPCSubnetCidrAppAZ1:
    Type: String
    Description: AZ1 App Subnet
  VPCSubnetCidrAppAZ2:
    Type: String
    Description: AZ2 App Subnet
  VPCSubnetCidrAppAZ3:
    Type: String
    Description: AZ3 App Subnet
  ValKeyCacheInstanceType:
    Type: String
    Description: ValKey Cache Instance Type
  ValKeyAuthToken:
    Type: String
    Description: ValKey Cluster Authentication Token
    NoEcho: true
  VpcCidr1:
    Description: VPC CIDR 1 IP Range
    Type: String
    Default: ""
  VpcCidr2:
    Description: VPC CIDR 2 IP Range
    Type: String
    Default: ""
  VpcCidr3:
    Description: VPC CIDR 3 IP Range
    Type: String
    Default: ""
  S3PrefixListId:
    Description: S3 PrefixList ID
    Type: String
    Default: ""
  HCCVpceCidr:
    Description: HCC VPC Endpoint Subnet, Fixed CIDR Range from HCC
    Type: String
    Default: ""

Conditions:
  IsProduction: !Or [!Equals [!Ref "EnvName", "prod"], !Equals [!Ref "EnvName", "prod-a"], !Equals [!Ref "EnvName", "prod-b"], !Equals [!Ref "EnvName", "prod-c"]]
  HasVPCSubnetCidrAppAZ3: !Not [!Equals [!Ref VPCSubnetCidrAppAZ3, '']]
  HasVpcCidr3: !Not [!Equals [!Ref VpcCidr3, '']]
  HasVpcCidr2: !Not [!Equals [!Ref VpcCidr2, '']]
  HasHCCVpceCidr: !Not [!Equals [!Ref HCCVpceCidr, ""]]
  HasS3PrefixListId: !Not [!Equals [!Ref S3PrefixListId, ""]]

Resources:
  ElasticacheSubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties: 
      CacheSubnetGroupName: !Sub ${AppShortName}-${EnvName}-ecvalkey-SubnetGroup
      Description: SubnetGroup for ElastiCache ValKey Cluster
      SubnetIds: !Ref AppSubnetIds
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-ElastiCache-ValKey-v3

  ElasticacheSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      GroupName: !Sub ${AppShortName}-${EnvName}-sg-elasticache
      GroupDescription: Security Group for Elasticache ValKey Cluster
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: App Subnet AZ1
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: App Subnet AZ2
        - !If 
            - "HasVPCSubnetCidrAppAZ3"
            - IpProtocol: tcp
              FromPort: 6379
              ToPort: 6379
              CidrIp: !Ref VPCSubnetCidrAppAZ3
              Description: App Subnet AZ3
            - !Ref AWS::NoValue
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If 
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"     
        - !If
          - HasS3PrefixListId
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            DestinationPrefixListId: !Ref S3PrefixListId
            Description: Allow access to Amazon S3 Endpoint
          - !Ref "AWS::NoValue"
        - !If
          - HasHCCVpceCidr
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref HCCVpceCidr
            Description: HCC VPC Endpoint Subnet
          - !Ref "AWS::NoValue"
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-ElastiCache-ValKey-v3

  ElasticacheLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub ${AppShortName}-${EnvName}-valkey-cache
      RetentionInDays: 365  # Adjust retention period as needed
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-ElastiCache-ValKey-v3

  ValKeyCluster:
    Type: 'AWS::ElastiCache::ReplicationGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ReplicationGroupId: !Sub ${AppShortName}-${EnvName}-valkey-cache
      AtRestEncryptionEnabled: true
      AuthToken: !Ref ValKeyAuthToken
      TransitEncryptionEnabled: true
      AutomaticFailoverEnabled: true
      CacheNodeType: !Ref ValKeyCacheInstanceType
      CacheParameterGroupName: default.valkey8.cluster.on
      MultiAZEnabled: true
      CacheSubnetGroupName: !Ref ElasticacheSubnetGroup
      Engine: valkey
      EngineVersion: '8.0'
      NumNodeGroups: '1'
      ReplicasPerNodeGroup: '1'
      Port: 6379
      PreferredMaintenanceWindow: 'sun:05:00-sun:09:00'
      ReplicationGroupDescription: ElastiCache ValKey Cluster
      SecurityGroupIds:
        - !GetAtt ElasticacheSecurityGroup.GroupId
      SnapshotRetentionLimit: 5
      SnapshotWindow: '10:00-12:00'
      LogDeliveryConfigurations:
        - DestinationType: cloudwatch-logs
          LogFormat: json
          DestinationDetails:
            CloudWatchLogsDetails:
              LogGroup: !Ref ElasticacheLogGroup
          LogType: slow-log
        - DestinationType: cloudwatch-logs
          LogFormat: json
          DestinationDetails:
            CloudWatchLogsDetails:
              LogGroup: !Ref ElasticacheLogGroup
          LogType: engine-log
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-ElastiCache-ValKey-v3
